<resources>
    <string name="app_name">NASCAR Stats</string>
    <!--find a better way to change the size of these later-->
    <string name="add_driver"><font size="30">+</font></string>
    <string name="remove_driver"><font size="30">-</font></string>
    <string name="confirm_driver">"Add"</string>
    <string name="cancel_driver">"Cancel"</string>
    <string name="add_driver_prompt">Enter Driver\'s Name</string>
    <string name="delete_driver">Delete</string>
    <string name="title_activity_driver_stats">DriverStats</string>
    <string name="profile_tab">Profile</string>
    <string name="season_tab">Season</string>
    <string name="teststring">This is a test</string>
    <string name="drivers_stats"> %s\'s stats</string>
    <string name="results">Results</string>
    <string name="practice">Practice</string>
    <string name="qualifying">Qualifying</string>
    <string name="personal_info">Personal Info</string>
    <string name="height">Height: %d\"</string>
    <string name="bday">Birthday: %s</string>
    <string name="rookie">Rookie Year: %d</string>
    <string name="residence">Residence: %s</string>
    <string name="birthplace">Birthplace: %s</string>
    <string name="team">Team: %s</string>
    <string name="crewchief">Crew Chief: %s</string>
    <string name="starts">Starts: %d</string>
    <string name="wins">Wins: %d</string>
    <string name="top5">Top 5\'s: %d</string>
    <string name="top10">Top 10\'s: %d</string>
    <string name="poles">Poles: %d</string>
    <string name="dnf">DNF\'s: %d</string>
    <string name="laps">Laps Led: %d</string>
    <string name="point_pos">Current Points Position: #%d</string>
    <string name="change_year">Enter the Desired Year</string>
    <string name="season_tag">SeasonTag</string>
    <string name="started">Started: #%d</string>
    <string name="finished">Finished: #%d</string>
    <string name="rating">Driver Rating: %.2f</string>
    <string name="pit_stops">Pit Stops: %d</string>
    <string name="avg_pos">Avg. Position: %.2f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
