<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/career_stats_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DriverProfile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number"
            android:textSize="22sp"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textAlignment="center"
            android:id="@+id/name"
            android:padding="16dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="26sp"/>

    <LinearLayout
        android:id="@+id/personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:textSize="20sp"
            android:id="@+id/height"
            android:text="@string/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:id="@+id/birthday"
            android:text="@string/bday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:id="@+id/rookie_year"
            android:text="@string/rookie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:id="@+id/residence"
            android:text="@string/residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:id="@+id/birthplace"
            android:text="@string/birthplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:id="@+id/team"
            android:text="@string/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:id="@+id/crew_chief"
            android:text="@string/crewchief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="Stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="26sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/personal_stats"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:textSize="20sp"
                android:id="@+id/wins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wins"/>
            <TextView
                android:textSize="20sp"
                android:id="@+id/starts"
                android:text="@string/starts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:id="@+id/top5"
                android:text="@string/top5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:id="@+id/top10"
                android:text="@string/top10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:textSize="20sp"
                android:id="@+id/poles"
                android:text="@string/poles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:id="@+id/dnf"
                android:text="@string/dnf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:id="@+id/laps_led"
                android:text="@string/laps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>